@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2004/07/30 05:23:37 minskim Exp $
+$NetBSD: distinfo,v 1.3 2004/08/09 16:48:19 minskim Exp $
 
-SHA1 (ttf-alee_0.4.tar.gz) = b12387cfa163e4d4a41cd71949905a7b7817f7bb
-Size (ttf-alee_0.4.tar.gz) = 276934 bytes
+SHA1 (ttf-alee_1.1.tar.gz) = 0fe0423466c3d22cea44c360896396f87ecdd8c4
+Size (ttf-alee_1.1.tar.gz) = 276919 bytes
